--- a/src/main/Chapt13-ex#1.ipynb
+++ b/src/main/Chapt13-ex#1.ipynb
@@ -8,12 +8,14 @@
    },
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-1-471f4db66298>, line 1)",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-1-471f4db66298>\"\u001b[0;36m, line \u001b[0;32m1\u001b[0m\n\u001b[0;31m    \"Missisipi\".toList.foldLeft(Map[Char,Int]()){\u001b[0m\n\u001b[0m                                                ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ],
-     "output_type": "error"
+     "data": {
+      "text/plain": [
+       "Map(M -> 77, i -> 105, s -> 115, p -> 112)"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
