--- a/src/main/Chapt13-ex#3.ipynb
+++ b/src/main/Chapt13-ex#3.ipynb
@@ -2,19 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ListBuffer(1, 2, 3, 4, 5, 6, 7)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "var mylb = scala.collection.mutable.ListBuffer(1,2,3,4,5,6,7)\n",
     "print(mylb)"
@@ -22,19 +14,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ListBuffer(1, 2, 3, 7)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "mylb.remove(3)\n",
     "print(mylb)"
@@ -42,22 +26,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 167,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "30"
-      ]
-     },
-     "execution_count": 167,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "mylb.reduce(_ + _)"
    ]
@@ -146,103 +119,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ListBuffer(0, 0, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11)\n",
-      "a: 13\n",
-      "b:ListBuffer()\n",
-      "ListBuffer(0, 0, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10)\n",
-      "a: 12\n",
-      "b:ListBuffer()\n",
-      "ListBuffer(0, 0, 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10)\n",
-      "a: 11\n",
-      "b:ListBuffer()\n",
-      "ListBuffer(0, 0, 0, 1, 2, 3, 4, 5, 6, 7, 8, 10)\n",
-      "a: 10\n",
-      "b:ListBuffer()\n",
-      "ListBuffer(0, 0, 0, 1, 2, 3, 4, 5, 6, 7, 8, 10)\n",
-      "a: 9\n",
-      "b:ListBuffer()\n",
-      "ListBuffer(0, 0, 0, 1, 2, 3, 4, 5, 6, 8, 10)\n",
-      "a: 8\n",
-      "b:ListBuffer()\n",
-      "ListBuffer(0, 0, 0, 1, 2, 3, 4, 5, 6, 8, 10)\n",
-      "a: 7\n",
-      "b:ListBuffer()\n",
-      "ListBuffer(0, 0, 0, 1, 2, 3, 4, 6, 8, 10)\n",
-      "a: 6\n",
-      "b:ListBuffer()\n",
-      "ListBuffer(0, 0, 0, 1, 2, 3, 4, 6, 8, 10)\n",
-      "a: 5\n",
-      "b:ListBuffer()\n",
-      "ListBuffer(0, 0, 0, 1, 2, 4, 6, 8, 10)\n",
-      "a: 4\n",
-      "b:ListBuffer()\n",
-      "ListBuffer(0, 0, 0, 1, 2, 4, 6, 8, 10)\n",
-      "a: 3\n",
-      "b:ListBuffer()\n",
-      "ListBuffer(0, 0, 0, 2, 4, 6, 8, 10)\n",
-      "a: 2\n",
-      "b:ListBuffer()\n",
-      "ListBuffer(0, 0, 0, 2, 4, 6, 8, 10)\n",
-      "a: 1\n",
-      "b:ListBuffer()\n",
-      "ListBuffer(0, 0, 2, 4, 6, 8, 10)\n",
-      "a: 0\n",
-      "b:ListBuffer()\n",
-      "ListBuffer(0, 0, 2, 4, 6, 8, 10)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "ListBuffer()"
-      ]
-     },
-     "execution_count": 151,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "var mylb = scala.collection.mutable.ListBuffer(0,0,0,1,2,3,4,5,6,7,8,9,10,11)\n",
     "println (mylb)\n",
     "mylb.indices.foldRight(scala.collection.mutable.ListBuffer[Int]())((a,b)=>\n",
-    "            {if(a%2!=0){mylb.remove(a)}; println(\"a: \"+a);println(\"b:\" + b);println(mylb);b }  )\n"
+    "            {if(a%2!=0){mylb.remove(a)}; println(\"a: \"+a);println(\"b:\" + b);println(mylb);b }  )"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Yes - _foldRight_ - this is RIGHT. Note - _b_ = _mylb_ "
+    "_foldRight_ solution. Note - _b_ = _mylb_ "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ListBuffer(0, 2, 4, 6, 8, 10)"
-      ]
-     },
-     "execution_count": 153,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "var mylb = scala.collection.mutable.ListBuffer(0,1,2,3,4,5,6,7,8,9,10,11)\n",
     "mylb.indices.foldRight(scala.collection.mutable.ListBuffer[Int]())(\n",
@@ -262,22 +164,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ListBuffer(0, 2, 4, 6, 8, 10)"
-      ]
-     },
-     "execution_count": 154,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "var mylb = scala.collection.mutable.ListBuffer(0,1,2,3,4,5,6,7,8,9,10,11)\n",
     "mylb.indices.foldRight(scala.collection.mutable.ListBuffer[Int]())(\n",
@@ -296,22 +187,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ListBuffer(0, 2, 4, 6, 8, 10)"
-      ]
-     },
-     "execution_count": 152,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "var mylb = scala.collection.mutable.ListBuffer(0,1,2,3,4,5,6,7,8,9,10,11)\n",
     "mylb.indices.foldRight(scala.collection.mutable.ListBuffer[Int]())((a,b) => a%2 match \n",
@@ -323,80 +203,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 164,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a: 11\n",
-      "b: ()\n",
-      "a: 10\n",
-      "b: ()\n",
-      "a: 9\n",
-      "b: ()\n",
-      "a: 8\n",
-      "b: ()\n",
-      "a: 7\n",
-      "b: ()\n",
-      "a: 6\n",
-      "b: ()\n",
-      "a: 5\n",
-      "b: ()\n",
-      "a: 4\n",
-      "b: ()\n",
-      "a: 3\n",
-      "b: ()\n",
-      "a: 2\n",
-      "b: ()\n",
-      "a: 1\n",
-      "b: ()\n",
-      "a: 0\n",
-      "b: ()\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "ListBuffer(0, 2, 4, 6, 8, 10)"
-      ]
-     },
-     "execution_count": 164,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "var mylb = scala.collection.mutable.ListBuffer(0,1,2,3,4,5,6,7,8,9,10,11)\n",
     "mylb.indices.foldRight()((a,b)=>{if(a%2!=0){mylb.remove(a)};println(\"a: \"+a);println(\"b: \"+b);})\n",
-    "mylb "
+    "mylb"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "ListBuffer(0, 2, 4, 6, 8, 10)"
-      ]
-     },
-     "execution_count": 162,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "var mylb = scala.collection.mutable.ListBuffer(0,1,2,3,4,5,6,7,8,9,10,11)\n",
     "mylb.indices.foldRight()((a,b)=>{if(a%2!=0){mylb.remove(a)}})\n",
-    "mylb            "
+    "mylb"
    ]
   },
   {
@@ -404,69 +232,6 @@
    "metadata": {},
    "source": [
     "Looks much more elegant "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 183,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "a: 10\n",
-      "b: 11\n",
-      "ListBuffer(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10)\n",
-      "a: 9\n",
-      "b: 0\n",
-      "ListBuffer(0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10)\n",
-      "a: 8\n",
-      "b: 0\n",
-      "ListBuffer(0, 1, 2, 3, 4, 5, 6, 7, 8, 10)\n",
-      "a: 7\n",
-      "b: 0\n",
-      "ListBuffer(0, 1, 2, 3, 4, 5, 6, 7, 8, 10)\n",
-      "a: 6\n",
-      "b: 0\n",
-      "ListBuffer(0, 1, 2, 3, 4, 5, 6, 8, 10)\n",
-      "a: 5\n",
-      "b: 0\n",
-      "ListBuffer(0, 1, 2, 3, 4, 5, 6, 8, 10)\n",
-      "a: 4\n",
-      "b: 0\n",
-      "ListBuffer(0, 1, 2, 3, 4, 6, 8, 10)\n",
-      "a: 3\n",
-      "b: 0\n",
-      "ListBuffer(0, 1, 2, 3, 4, 6, 8, 10)\n",
-      "a: 2\n",
-      "b: 0\n",
-      "ListBuffer(0, 1, 2, 4, 6, 8, 10)\n",
-      "a: 1\n",
-      "b: 0\n",
-      "ListBuffer(0, 1, 2, 4, 6, 8, 10)\n",
-      "a: 0\n",
-      "b: 0\n",
-      "ListBuffer(0, 2, 4, 6, 8, 10)\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "ListBuffer(0, 2, 4, 6, 8, 10)"
-      ]
-     },
-     "execution_count": 183,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "var mylb = scala.collection.mutable.ListBuffer(0,1,2,3,4,5,6,7,8,9,10,11)\n",
-    "mylb.indices.reduceRight((a,b)=>{if((a+1)%2!=0){mylb.remove(a+1)};println(\"a: \"+a);println(\"b: \"+b);println(mylb);0})\n",
-    "mylb "
    ]
   },
   {
@@ -479,7 +244,7 @@
    "source": [
     "var mylb = scala.collection.mutable.ListBuffer()\n",
     "mylb.indices.reduceRight((a,b)=>{if((a+1)%2!=0){mylb.remove(a+1)};println(\"a: \"+a);println(\"b: \"+b);println(mylb);0})\n",
-    "mylb "
+    "mylb"
    ]
   },
   {
@@ -487,6 +252,47 @@
    "metadata": {},
    "source": [
     "Solution with just _reduceRight_ will not work in case empty list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "var mylb = scala.collection.mutable.ListBuffer(0,1,2,3,4,5,6,7,8,9,10,11)\n",
+    "mylb.indices.reverse.foreach{(i:Int)=> if( i%2!=0 && i<mylb.length ) mylb.remove(i);println(mylb)}\n",
+    "mylb"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This solution simpler than _reduceRight_ and will work faster (take 2ms). The idea to use _revers_ in order to remove elements from the list end."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "var mylb = scala.collection.mutable.ListBuffer(0,1,2,3,4,5,6,7,8,9,10,11)\n",
+    "var mylbnew = scala.collection.mutable.ListBuffer[Int]()\n",
+    "mylb.indices.foreach{(i:Int)=> if( i%2==0 && i<mylb.length) mylbnew+=mylb(i);println(mylbnew)}\n",
+    "mylbnew"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "This solution with using additional buffer - took 1ms the previous solution takes 2ms "
    ]
   }
  ],
@@ -502,5 +308,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 0
 }
