--- a/src/main/Chapt14-ex#5,6,7,8.ipynb
+++ b/src/main/Chapt14-ex#5,6,7,8.ipynb
@@ -118,6 +118,98 @@
     "val nodeRoot = MyNode(nodeOne, nodeTwo)\n",
     "treeSum(nodeRoot)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "Exercise 7"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MyNode(WrappedArray(MyLeaf(1), MyLeaf(2)))\n",
+      "MyNode(WrappedArray(MyLeaf(1), MyLeaf(2), MyLeaf(5)))\n",
+      "MyNode(WrappedArray(MyNode(WrappedArray(MyLeaf(1), MyLeaf(2))), MyNode(WrappedArray(MyLeaf(1), MyLeaf(2), MyLeaf(5)))))\n",
+      "MyNode(WrappedArray(MyNode(WrappedArray(MyLeaf(3), MyLeaf(8))), MyLeaf(2), MyNode(WrappedArray(MyLeaf(5)))))\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "Name: Compile Error\n",
+       "Message: <console>:30: error: reference to MyBinaryTree is ambiguous;\n",
+       "it is imported twice in the same scope by\n",
+       "import INSTANCE.MyBinaryTree\n",
+       "and import INSTANCE.MyBinaryTree\n",
+       "       def treeSum(node: MyBinaryTree):Int = {\n",
+       "                         ^\n",
+       "<console>:32: error: reference to MyLeaf is ambiguous;\n",
+       "it is imported twice in the same scope by\n",
+       "import INSTANCE.MyLeaf\n",
+       "and import INSTANCE.MyLeaf\n",
+       "              case MyLeaf(x) => x\n",
+       "                   ^\n",
+       "<console>:32: error: not found: value x\n",
+       "              case MyLeaf(x) => x\n",
+       "                                ^\n",
+       "<console>:33: error: reference to MyNode is ambiguous;\n",
+       "it is imported twice in the same scope by\n",
+       "import INSTANCE.MyNode\n",
+       "and import INSTANCE.MyNode\n",
+       "              case MyNode(n1, n2) => treeSum(n1)+treeSum(n2)\n",
+       "                   ^\n",
+       "<console>:33: error: not found: value n1\n",
+       "              case MyNode(n1, n2) => treeSum(n1)+treeSum(n2)\n",
+       "                                             ^\n",
+       "StackTrace: "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sealed abstract class MyBinaryTree;\n",
+    "case class MyLeaf(value: Int) extends MyBinaryTree;\n",
+    "case class MyNode(node: MyBinaryTree*) extends MyBinaryTree;\n",
+    "case object Nothing extends MyBinaryTree;\n",
+    "\n",
+    "val nodeOne = MyNode(MyLeaf(1), MyLeaf(2))\n",
+    "val nodeTwo = MyNode(MyLeaf(1), MyLeaf(2), MyLeaf(5))\n",
+    "val nodeThree = MyNode(nodeOne, nodeTwo)\n",
+    "val problemNode = MyNode(MyNode(MyLeaf(3),MyLeaf(8)), MyLeaf(2), MyNode(MyLeaf(5)))\n",
+    "\n",
+    "println(nodeOne)\n",
+    "println(nodeTwo)\n",
+    "println(nodeThree) \n",
+    "println(problemNode)\n",
+    "\n",
+    "def treeSum(node: MyBinaryTree):Int = {\n",
+    "   node match {\n",
+    "       case MyLeaf(x) => x\n",
+    "       case MyNode(n1, n2) => treeSum(n1)+treeSum(n2)\n",
+    "       case Nothing => 0\n",
+    "   }\n",
+    "      \n",
+    "}\n",
+    "\n",
+    "treeSum(problemNode)"
+   ]
   }
  ],
  "metadata": {
